# test-compiler

./: .gitignore  CMakeLists.txt  build.sh  env.sh  requirements.txt
bindings/: CMakeLists.txt  compiler.py.in  env.source.sh.in  setup.py.in
bindings/extensions/: _annotate.cpp  annotate.cpp  hello.cpp  spam.cpp
bindings/modules/: __init__.py  run.py  system.py
bindings/tests/: test_annotate.py  test_annotations.py  test_demo.py  test_system.py
bindings/tests/data/: conditional_branch.expected.marker.cpp  conditional_branch.expected.visual.cpp  conditional_branch.orignal.cpp  for_branch.expected.marker.cpp  for_branch.orignal.cpp  if_branch.cpp  if_branch.expected.visual.cpp  while_branch.expected.marker.cpp  while_branch.orignal.cpp
bindings/tests/data/includes/: gcc.includes.txt
bindings/tests/data/sources/: conditional_branch.original.cpp  if_branch.expected.marker.cpp  if_branch.orignal.cpp
bindings/tests/integration/: test_coverage.py
bindings/tests/unit/: test_annotations.py  test_system.py
bindings/tests/unit/data/includes/: clang++.includes.txt  clang.includes.txt  g++.includes.txt
bindings/tests/unit/data/sources/: while_branch.expected.visual.cpp  while_branch.orignal.cpp
lib/: CMakeLists.txt  library.cpp
lib/include/: demo.h
lib/include/cmc/: container.h  parser.h
lib/include/coverage/: annotate.hpp  annotation.hpp  instrument.h  plugin.h
lib/include/coverage/instrument/: base.h  default.h  defines.h
lib/include/coverage/instrument/impl/: registry.h
lib/src/: annotate.cpp  annotation_action.hpp  annotation_consumer.hpp  annotation_visitor.cpp  annotation_visitor.hpp  instrument.cpp  library.cpp  parser.cpp
lib/src/instrument/: default.c
lib/tests/: main.cpp  test_demo.cpp  test_enums.cpp  test_instrumentation.cpp  test_instrumentation_default.cpp  test_instrumentation_file.cpp
lib/tests/data/: data1.cpp
modules/: FindClang.cmake  FindLLVM.cmake  UsePython.cmake
prototypes/: Makefile  write-to-file.cpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  demo.cpp
tests/bindings/: CMakeLists.txt  demo.py
tests/unittests/: CMakeLists.txt  demo.cpp
